src/objects/appsolutely__ISO_3166_Entry__mdt.object
<CustomObject>
    <description>3 letter and 3 digit country codes according to ISO 3166</description>
    <fields>
        <fullName>appsolutely__Alpha_2_Code__c</fullName>
        <description>The 2 letter country code according to ISO 3166</description>
        <inlineHelpText>The 2 letter country code according to ISO 3166</inlineHelpText>
        <label>Alpha 2 Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>appsolutely__Country_Code__c</fullName>
        <description>The 3 digit country code according to ISO 3166</description>
        <inlineHelpText>The 3 digit country code according to ISO 3166</inlineHelpText>
        <label>Country Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>appsolutely__Country_Name__c</fullName>
        <description>The Country name according to ISO 3166</description>
        <label>Country Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ISO 3166 Entry</label>
    <pluralLabel>ISO 3166 Entries</pluralLabel>
</CustomObject>